manifests/backend-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
spec:
  hosts:
  - backend.project1.svc.cluster.local
  trafficPolicy:
    loadBalancer:
      simple: ROUND_ROBIN
    tls:
      mode: DISABLE #ISTIO_MUTUAL
  http:
  - route:
    - destination:
        port:
          number: 8080
        host: backend.project1.svc.cluster.local
